Fix bug VideoServiceImpl.deleteVideoById()