@@ -2,7 +2,6 @@ package com.example.videosharingapi.controller;
 
 import com.example.videosharingapi.common.TestSql;
 import com.example.videosharingapi.dto.CategoryDto;
-import com.example.videosharingapi.dto.ThumbnailDto;
 import com.example.videosharingapi.dto.VideoDto;
 import com.example.videosharingapi.dto.VideoRatingDto;
 import com.example.videosharingapi.entity.Hashtag;
@@ -25,7 +24,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.HashMap;
 import java.util.List;
 import java.util.UUID;
 
@@ -40,7 +38,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @ActiveProfiles("test")
 @AutoConfigureMockMvc
 @TestSql
-@WithUserDetails("user2")
+@WithUserDetails("user1")
 public class VideoControllerTest {
 
     private @Autowired VideoRepository videoRepository;
@@ -48,32 +46,27 @@ public class VideoControllerTest {
     private @Autowired VideoStatisticRepository videoStatisticRepository;
     private @Autowired HashtagRepository hashtagRepository;
     private @Autowired VideoRatingRepository videoRatingRepository;
+    private @Autowired ViewHistoryRepository viewHistoryRepository;
+    private @Autowired CommentRepository commentRepository;
+    private @Autowired CommentRatingRepository commentRatingRepository;
+    private @Autowired PlaylistItemRepository playlistItemRepository;
 
     private @Autowired MockMvc mockMvc;
     private @Autowired ObjectMapper objectMapper;
 
-    private final MockMultipartFile mockVideoFile = new MockMultipartFile(
+    private final MockMultipartFile createMockVideoFile = new MockMultipartFile(
             "videoFile",
             "test.mp4",
             "video/mp4", RandomStringUtils.random(10).getBytes());
 
     private VideoDto obtainVideoDto() {
-        var thumbnailDto = new ThumbnailDto();
-        thumbnailDto.setUrl("Video thumbnail URL");
-        thumbnailDto.setWidth(100);
-        thumbnailDto.setHeight(100);
-
-        var thumbnails = new HashMap<Thumbnail.Type, ThumbnailDto>();
-        thumbnails.put(Thumbnail.Type.DEFAULT, thumbnailDto);
-
         var videoDto = new VideoDto();
         videoDto.setSnippet(VideoDto.Snippet.builder()
                 .title("Video title")
                 .description("Video description")
-                .thumbnails(thumbnails)
                 .hashtags(List.of("music", "pop"))
                 .userId("a05990b1")
-                .category(new CategoryDto("8c1f4a20"))
+                .category(new CategoryDto("c0f3f41e"))
                 .build());
         videoDto.setStatus(VideoDto.Status.builder()
                 .privacy("private")
@@ -86,20 +79,20 @@ public class VideoControllerTest {
 
     private VideoDto obtainVideoDtoForUpdate() {
         var videoDto = new VideoDto();
-        videoDto.setId("e65707b4");
+        videoDto.setId("37b32dc2");
         videoDto.setSnippet(VideoDto.Snippet.builder()
-                .title("Video 3 updated")
-                .description("Video 3 description updated")
+                .title("Video 1 updated")
+                .description("Video 1 description updated")
                 .publishedAt(LocalDateTime.parse("2030-01-01T09:00:00"))
-                .videoUrl("Video 3 video URL updated")
+                .videoUrl("Video 1 video URL updated")
                 .userId("a05990b1")
                 .duration(Duration.ofSeconds(9000))
-                .category(new CategoryDto("d073f837"))
+                .category(new CategoryDto("f2fe0cb6"))
                 .location("US")
                 .hashtags(List.of("art"))
                 .build());
         videoDto.setStatus(VideoDto.Status.builder()
-                .privacy("private")
+                .privacy("public")
                 .ageRestricted(false)
                 .commentAllowed(false)
                 .madeForKids(true)
@@ -108,7 +101,7 @@ public class VideoControllerTest {
     }
 
     @Test
-    @WithUserDetails("user1")
+    @WithUserDetails("admin")
     public void whenGetAllVideosWithRoleAdmin_thenSuccess() throws Exception {
         mockMvc.perform(get("/api/v1/videos"))
                 .andExpect(status().isOk())
@@ -116,7 +109,7 @@ public class VideoControllerTest {
     }
 
     @Test
-    @WithUserDetails("user2")
+    @WithUserDetails("user1")
     public void whenGetAllVideosWithRoleUser_thenForbidden() throws Exception {
         mockMvc.perform(get("/api/v1/videos"))
                 .andExpect(status().isForbidden());
@@ -126,19 +119,18 @@ public class VideoControllerTest {
     public void whenGetMyVideos_thenSuccess() throws Exception {
         mockMvc.perform(get("/api/v1/videos/mine"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(1));
+                .andExpect(jsonPath("$.length()").value(2));
     }
 
     @Test
     public void givenVideoId_whenGetVideo_thenReturnExpectedVideo() throws Exception {
-        mockMvc.perform(get("/api/v1/videos/{videoId}", "e65707b4"))
+        mockMvc.perform(get("/api/v1/videos/{videoId}", "f7d9b74b"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.snippet.title").value("Video 3"))
-                .andExpect(jsonPath("$.snippet.userId")
-                        .value("a05990b1"))
+                .andExpect(jsonPath("$.snippet.title").value("Video 2"))
+                .andExpect(jsonPath("$.snippet.userId").value("a05990b1"))
                 .andExpect(jsonPath("$.snippet.thumbnails.length()").value(1))
                 .andExpect(jsonPath("$.snippet.thumbnails.DEFAULT.url")
-                        .value("Video 3 default thumbnail"));
+                        .value("Video 2 default thumbnail URL"));
     }
 
     @Test
@@ -150,12 +142,13 @@ public class VideoControllerTest {
                 "application/json", objectMapper.writeValueAsBytes(videoDto));
 
         mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
+                        .file(createMockVideoFile)
                         .file(metadata))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.snippet.title").value("Video title"))
                 .andExpect(jsonPath("$.snippet.duration").value("PT16M40S"))
-                .andExpect(jsonPath("$.snippet.userId").value("a05990b1"));
+                .andExpect(jsonPath("$.snippet.userId").value("a05990b1"))
+                .andExpect(jsonPath("$.snippet.category.category").value("Sports"));
     }
 
     @Test
@@ -167,16 +160,16 @@ public class VideoControllerTest {
                 "application/json", objectMapper.writeValueAsBytes(videoDto));
 
         var result = mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
+                        .file(createMockVideoFile)
                         .file(metadata))
                 .andExpect(status().isCreated())
                 .andReturn();
 
         // Assert Video is created.
+        assertThat(videoRepository.findAll()).hasSize(4);
         var video = videoRepository
                 .findById(JsonPath.read(result.getResponse().getContentAsString(), "$.id"));
         assertThat(video).isPresent();
-        assertThat(videoRepository.findAll()).hasSize(4);
 
         // Assert VideoStatistic is created.
         var videoStatistic = videoStatisticRepository.findById(video.get().getId());
@@ -185,49 +178,10 @@ public class VideoControllerTest {
         // Assert Thumbnails is created.
         var thumbnails = thumbnailRepository.findAllByVideoId(video.get().getId());
         assertThat(thumbnails).hasSize(1);
-        assertThat(thumbnails.get(0).getType()).isEqualTo(Thumbnail.Type.DEFAULT);
+        assertThat(thumbnails.getFirst().getType()).isEqualTo(Thumbnail.Type.DEFAULT);
 
         // Assert Hashtags is created.
         assertThat(hashtagRepository.findAllTag()).containsExactlyInAnyOrder("music", "pop", "sport");
-    }
-
-    @Test
-    public void givenInvalidUserId_whenPostVideo_thenError() throws Exception {
-        var videoDto = obtainVideoDto();
-        videoDto.getSnippet().setUserId(UUID.randomUUID().toString());
-        var metadata = new MockMultipartFile(
-                "metadata",
-                null,
-                "application/json", objectMapper.writeValueAsBytes(videoDto));
-
-        mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
-                        .file(metadata))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.errors[0]")
-                        .value("snippet.userId: ID does not exist."));
-
-        // Assert video is not saved.
-        assertThat(videoRepository.count()).isEqualTo(3);
-    }
-
-    @Test
-    public void givenMissingUserId_whenPostVideo_thenError() throws Exception {
-        var videoDto = obtainVideoDto();
-        videoDto.getSnippet().setUserId(null);
-        var metadata = new MockMultipartFile(
-                "metadata", null,
-                "application/json", objectMapper.writeValueAsBytes(videoDto));
-
-        mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
-                        .file(metadata))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.errors[0]")
-                        .value("snippet.userId: must not be null"));
-
-        // Assert video is not saved.
-        assertThat(videoRepository.count()).isEqualTo(3);
     }
 
     @Test
@@ -248,95 +202,52 @@ public class VideoControllerTest {
     }
 
     @Test
-    public void givenMissingVideoTitle_whenPostVideo_thenError() throws Exception {
+    public void givenMissingMetadata_whenPostVideo_thenError() throws Exception {
         var videoDto = obtainVideoDto();
         videoDto.getSnippet().setTitle(null);
-        var metadata = new MockMultipartFile(
-                "metadata", null,
-                "application/json", objectMapper.writeValueAsBytes(videoDto));
-
-        mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
-                        .file(metadata))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.errors[0]")
-                        .value("snippet.title: must not be blank"));
-
-        // Assert video is not saved.
-        assertThat(videoRepository.count()).isEqualTo(3);
-    }
-
-    @Test
-    public void givenMissingVideoCategory_whenPostVideo_thenError() throws Exception {
-        var videoDto = obtainVideoDto();
+        videoDto.getSnippet().setUserId(null);
         videoDto.getSnippet().setCategory(null);
+        videoDto.getStatus().setPrivacy(null);
+
         var metadata = new MockMultipartFile(
                 "metadata", null,
                 "application/json", objectMapper.writeValueAsBytes(videoDto));
 
         mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
+                        .file(createMockVideoFile)
                         .file(metadata))
                 .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.errors[0]")
-                        .value("snippet.category: must not be null"));
+                .andExpect(jsonPath("$.errors")
+                        .value(containsInAnyOrder(
+                                "snippet.userId: must not be null",
+                                "snippet.title: must not be blank",
+                                "snippet.category: must not be null",
+                                "status.privacy: must not be blank")));
 
         // Assert video is not saved.
         assertThat(videoRepository.count()).isEqualTo(3);
     }
 
     @Test
-    public void givenInvalidVideoCategory_whenPostVideo_thenError() throws Exception {
+    public void givenInvalidMetadata_whenPostVideo_thenError() throws Exception {
         var videoDto = obtainVideoDto();
         videoDto.getSnippet().getCategory().setId(UUID.randomUUID().toString());
-        var metadata = new MockMultipartFile(
-                "metadata", null,
-                "application/json", objectMapper.writeValueAsBytes(videoDto));
-
-        mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
-                        .file(metadata))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.errors[0]")
-                        .value("snippet.category.id: ID does not exist."));
-
-        // Assert video is not saved.
-        assertThat(videoRepository.count()).isEqualTo(3);
-    }
-
-    @Test
-    public void givenMissingPrivacy_whenPostVideo_thenError() throws Exception {
-        var videoDto = obtainVideoDto();
-        videoDto.getStatus().setPrivacy(null);
-        var metadata = new MockMultipartFile(
-                "metadata", null,
-                "application/json", objectMapper.writeValueAsBytes(videoDto));
-
-        mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
-                        .file(metadata))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.errors[0]")
-                        .value("status.privacy: must not be blank"));
-
-        // Assert video is not saved.
-        assertThat(videoRepository.count()).isEqualTo(3);
-    }
-
-    @Test
-    public void givenInvalidPrivacyStatus_whenPostVideo_thenError() throws Exception {
-        var videoDto = obtainVideoDto();
         videoDto.getStatus().setPrivacy("privates");
+        videoDto.getSnippet().setUserId(UUID.randomUUID().toString());
+
         var metadata = new MockMultipartFile(
                 "metadata", null,
                 "application/json", objectMapper.writeValueAsBytes(videoDto));
 
         mockMvc.perform(multipart("/api/v1/videos")
-                        .file(mockVideoFile)
+                        .file(createMockVideoFile)
                         .file(metadata))
                 .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.errors[0]")
-                        .value("status.privacy: must match \"(?i)(private|public)\""));
+                .andExpect(jsonPath("$.errors")
+                        .value(containsInAnyOrder(
+                                "snippet.category.id: ID does not exist.",
+                                "status.privacy: must match \"(?i)(private|public)\"",
+                                "snippet.userId: ID does not exist.")));
 
         // Assert video is not saved.
         assertThat(videoRepository.count()).isEqualTo(3);
@@ -350,37 +261,37 @@ public class VideoControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(videoDto)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.snippet.title").value("Video 3 updated"))
+                .andExpect(jsonPath("$.snippet.title").value("Video 1 updated"))
                 .andExpect(jsonPath("$.snippet.description")
-                        .value("Video 3 description updated"))
-                .andExpect(jsonPath("$.snippet.publishedAt").value("2024-04-03T09:00:00"))
-                .andExpect(jsonPath("$.snippet.thumbnails.length()").value(1))
+                        .value("Video 1 description updated"))
+                .andExpect(jsonPath("$.snippet.publishedAt").value("2024-04-01T09:00:00"))
+                .andExpect(jsonPath("$.snippet.thumbnails.length()").value(2))
                 .andExpect(jsonPath("$.snippet.thumbnails.DEFAULT.url")
-                        .value("Video 3 default thumbnail"))
-                .andExpect(jsonPath("@.snippet.category.id").value("d073f837"))
-                .andExpect(jsonPath("@.snippet.category.category").value("Education"))
+                        .value("Video 1 default thumbnail URL"))
+                .andExpect(jsonPath("@.snippet.category.id").value("f2fe0cb6"))
+                .andExpect(jsonPath("@.snippet.category.category").value("Comedy"))
                 .andExpect(jsonPath("$.snippet.userId").value("a05990b1"))
-                .andExpect(jsonPath("$.snippet.username").value("user2"))
+                .andExpect(jsonPath("$.snippet.username").value("user1"))
                 .andExpect(jsonPath("$.snippet.userImageUrl")
-                        .value("User 2 default thumbnail"))
-                .andExpect(jsonPath("$.snippet.videoUrl").value("Video 3 video URL"))
+                        .value("User 1 default thumbnail URL"))
+                .andExpect(jsonPath("$.snippet.videoUrl").value("Video 1 URL"))
                 .andExpect(jsonPath("$.snippet.hashtags").value(contains("art")))
-                .andExpect(jsonPath("$.snippet.duration").value("PT50M"))
+                .andExpect(jsonPath("$.snippet.duration").value("PT16M40S"))
                 .andExpect(jsonPath("$.snippet.location").value("US"))
-                .andExpect(jsonPath("$.status.privacy").value("PRIVATE"))
+                .andExpect(jsonPath("$.status.privacy").value("PUBLIC"))
                 .andExpect(jsonPath("$.status.ageRestricted").value(false))
                 .andExpect(jsonPath("$.status.commentAllowed").value(false))
                 .andExpect(jsonPath("$.status.madeForKids").value(true))
-                .andExpect(jsonPath("$.statistic.viewCount").value(2))
-                .andExpect(jsonPath("$.statistic.likeCount").value(0))
+                .andExpect(jsonPath("$.statistic.viewCount").value(4))
+                .andExpect(jsonPath("$.statistic.likeCount").value(2))
                 .andExpect(jsonPath("$.statistic.dislikeCount").value(0))
-                .andExpect(jsonPath("$.statistic.commentCount").value(2))
+                .andExpect(jsonPath("$.statistic.commentCount").value(1))
                 .andExpect(jsonPath("$.statistic.downloadCount").value(0));
     }
 
     @Test
     @Transactional
-    public void givenVideoDto_whenUpdate_thenAssertUpdatedVideo() throws Exception {
+    public void givenVideoDto_whenUpdate_thenDatabaseIsUpdated() throws Exception {
         var videoDto = obtainVideoDtoForUpdate();
         mockMvc.perform(put("/api/v1/videos")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -388,36 +299,40 @@ public class VideoControllerTest {
                 .andExpect(status().isOk());
 
         // Assert Video is updated.
-        var video = videoRepository.findById("e65707b4").orElseThrow();
-        assertThat(video.getTitle()).isEqualTo("Video 3 updated");
-        assertThat(video.getDescription()).isEqualTo("Video 3 description updated");
+        var video = videoRepository.findById("37b32dc2").orElseThrow();
+        assertThat(video.getTitle()).isEqualTo("Video 1 updated");
+        assertThat(video.getDescription()).isEqualTo("Video 1 description updated");
         // publishedAt not updated as expect.
-        assertThat(video.getPublishedAt()).isEqualTo(LocalDateTime.parse("2024-04-03T09:00:00"));
+        assertThat(video.getPublishedAt()).isEqualTo(LocalDateTime.parse("2024-04-01T09:00:00"));
         // videoUrl not updated as expect.
-        assertThat(video.getVideoUrl()).isEqualTo("Video 3 video URL");
-        assertThat(video.getCategory().getId()).isEqualTo("d073f837");
+        assertThat(video.getVideoUrl()).isEqualTo("Video 1 URL");
+        assertThat(video.getCategory().getId()).isEqualTo("f2fe0cb6");
         assertThat(video.getLocation()).isEqualTo("US");
         // thumbnails not updated as expect.
-        assertThat(video.getThumbnails()).hasSize(1);
-        assertThat(video.getThumbnails().getFirst().getUrl()).isEqualTo("Video 3 default thumbnail");
+        assertThat(video.getThumbnails()).hasSize(2);
+        assertThat(video.getThumbnails().stream().map(Thumbnail::getUrl)).containsExactlyInAnyOrder(
+                "Video 1 default thumbnail URL",
+                "Video 1 medium thumbnail URL");
         assertThat(video.getHashtags().stream().map(Hashtag::getTag)).containsExactlyInAnyOrder("art");
         // duration not updated as expect.
-        assertThat(video.getDurationSec()).isEqualTo(3000);
-        assertThat(video.getPrivacy().getId()).isEqualTo("ec386a4b");
+        assertThat(video.getDurationSec()).isEqualTo(1000);
+        assertThat(video.getPrivacy().getId()).isEqualTo("f01121d2");
         assertThat(video.getAgeRestricted()).isEqualTo(false);
         assertThat(video.getCommentAllowed()).isEqualTo(false);
         assertThat(video.getMadeForKids()).isEqualTo(true);
         assertThat(video.getUser().getId()).isEqualTo("a05990b1");
 
         // Assert Thumbnail is not updated.
-        assertThat(thumbnailRepository.findById("78a1b2d4")).isPresent();
+        assertThat(thumbnailRepository.findAllByVideoId("37b32dc2")).hasSize(2);
+        assertThat(thumbnailRepository.findAllByVideoId("37b32dc2").stream().map(Thumbnail::getType))
+                .containsExactlyInAnyOrder(Thumbnail.Type.DEFAULT, Thumbnail.Type.MEDIUM);
 
         // Assert VideoStatistic is not updated.
-        var videoStatistic = videoStatisticRepository.findById("e65707b4").orElseThrow();
-        assertThat(videoStatistic.getViewCount()).isEqualTo(2);
-        assertThat(videoStatistic.getLikeCount()).isEqualTo(0);
+        var videoStatistic = videoStatisticRepository.findById("37b32dc2").orElseThrow();
+        assertThat(videoStatistic.getViewCount()).isEqualTo(4);
+        assertThat(videoStatistic.getLikeCount()).isEqualTo(2);
         assertThat(videoStatistic.getDislikeCount()).isEqualTo(0);
-        assertThat(videoStatistic.getCommentCount()).isEqualTo(2);
+        assertThat(videoStatistic.getCommentCount()).isEqualTo(1);
         assertThat(videoStatistic.getDownloadCount()).isEqualTo(0);
 
         // Assert old hashtags is retained and new hashtags is added.
@@ -445,7 +360,7 @@ public class VideoControllerTest {
 
     @Test
     @Transactional
-    @WithUserDetails("user1")
+    @WithUserDetails("user2")
     public void givenVideoDtoAndInvalidUser_whenUpdateWith_thenError() throws Exception {
         var videoDto = obtainVideoDtoForUpdate();
 
@@ -459,28 +374,47 @@ public class VideoControllerTest {
     @Transactional
     public void givenVideoId_whenDeleteVideo_thenSuccess() throws Exception {
         mockMvc.perform(delete("/api/v1/videos")
-                        .param("id", "e65707b4"))
+                        .param("id", "37b32dc2"))
                 .andExpect(status().isNoContent());
     }
 
     @Test
     @Transactional
-    public void givenVideoId_whenDeleteVideo_thenAssertVideoIsDeleted() throws Exception {
+    public void givenVideoId_whenDeleteVideo_thenDatabaseIsUpdated() throws Exception {
         mockMvc.perform(delete("/api/v1/videos")
-                        .param("id", "e65707b4"))
+                        .param("id", "37b32dc2"))
                 .andExpect(status().isNoContent());
 
         // Assert Video is deleted.
-        assertThat(videoRepository.findById("e65707b4")).isNotPresent();
+        assertThat(videoRepository.findById("37b32dc2")).isNotPresent();
 
         // Assert Thumbnails is deleted.
-        assertThat(thumbnailRepository.findById("78a1b2d4")).isNotPresent();
+        assertThat(thumbnailRepository.count()).isEqualTo(6);
+        assertThat(thumbnailRepository.findAllById(List.of("b2825704", "2c48d7cd"))).isEmpty();
 
         // Assert VideoStatistic is deleted.
-        assertThat(videoStatisticRepository.findById("e65707b4")).isNotPresent();
+        assertThat(videoStatisticRepository.findById("37b32dc2")).isNotPresent();
 
         // Assert Hashtags is retained.
-        assertThat(hashtagRepository.count()).isEqualTo(2);
+        assertThat(hashtagRepository.findAllTag()).containsExactlyInAnyOrder("music", "sport");
+
+        // Assert VideoRating is deleted.
+        assertThat(videoRatingRepository.count()).isEqualTo(2);
+        assertThat(videoRatingRepository.findByVideoId("37b32dc2")).isEmpty();
+
+        // Assert ViewHistory is deleted.
+        assertThat(viewHistoryRepository.count()).isEqualTo(5);
+        assertThat(viewHistoryRepository.findAllByVideoId("37b32dc2")).isEmpty();
+
+        // Assert Comment is deleted.
+        assertThat(commentRepository.count()).isEqualTo(2);
+        assertThat(commentRepository.findAllByVideoId("37b32dc2")).isEmpty();
+        assertThat(commentRatingRepository.count()).isEqualTo(2);
+        assertThat(commentRatingRepository.findAllByCommentVideoId("37b32dc2")).isEmpty();
+
+        // Assert PlaylistItem is deleted.
+        assertThat(playlistItemRepository.count()).isEqualTo(2);
+        assertThat(playlistItemRepository.findAllByPlaylistId("236e2aa6")).isEmpty();
     }
 
     @Test
@@ -493,7 +427,6 @@ public class VideoControllerTest {
     }
 
     @Test
-    @WithUserDetails("user1")
     public void givenVideoIdAndInvalidUser_whenDeleteVideo_thenError() throws Exception {
         mockMvc.perform(delete("/api/v1/videos")
                         .param("id", "e65707b4"))
@@ -504,16 +437,15 @@ public class VideoControllerTest {
     public void whenGetVideosByCategoryAll_thenSuccess() throws Exception {
         mockMvc.perform(get("/api/v1/videos/category/all/mine"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[*].id")
-                        .value(containsInAnyOrder("f7d9b74b", "37b32dc2")));
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(jsonPath("$[*].id").value(contains("e65707b4")));
     }
 
     @Test
     public void givenVideoId_whenGetRating_thenReturnExpectedRating() throws Exception {
         // When there is no VideoRating.
         mockMvc.perform(get("/api/v1/videos/rate/mine")
-                        .param("videoId", "e65707b4"))
+                        .param("videoId", "f7d9b74b"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.rating").value(VideoRatingDto.NONE))
                 .andExpect(jsonPath("$.publishedAt").doesNotExist());
@@ -527,7 +459,7 @@ public class VideoControllerTest {
 
         // When there is VideoRating with DISLIKE type.
         mockMvc.perform(get("/api/v1/videos/rate/mine")
-                        .param("videoId", "f7d9b74b"))
+                        .param("videoId", "e65707b4"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.rating").value(VideoRatingDto.DISLIKE))
                 .andExpect(jsonPath("$.publishedAt").isNotEmpty());
@@ -535,9 +467,9 @@ public class VideoControllerTest {
 
     @Test
     @Transactional
-    public void givenVideoId_whenRateVideo_thenVideoRatingUpdatedAsExpected() throws Exception {
+    public void givenVideoId_whenRateVideo_thenDatabaseIsUpdated() throws Exception {
         final var userId = "a05990b1";
-        final var videoId = "e65707b4";
+        final var videoId = "f7d9b74b";
 
         // Rate NONE while there is no VideoRating then ignore.
         mockMvc.perform(post("/api/v1/videos/rate/mine")
@@ -548,6 +480,9 @@ public class VideoControllerTest {
 
         var videoRating = videoRatingRepository.findByUserIdAndVideoId(userId, videoId);
         assertThat(videoRating).isNull();
+        var videoStat = videoStatisticRepository.findById(videoId);
+        assertThat(videoStat.orElseThrow().getLikeCount()).isEqualTo(0);
+        assertThat(videoStat.orElseThrow().getDislikeCount()).isEqualTo(1);
 
         // Rate LIKE then VideoRating is created with LIKE type.
         mockMvc.perform(post("/api/v1/videos/rate/mine")
@@ -558,6 +493,9 @@ public class VideoControllerTest {
 
         videoRating = videoRatingRepository.findByUserIdAndVideoId(userId, videoId);
         assertThat(videoRating.getRating()).isEqualTo(VideoRating.Rating.LIKE);
+        videoStat = videoStatisticRepository.findById(videoId);
+        assertThat(videoStat.orElseThrow().getLikeCount()).isEqualTo(1);
+        assertThat(videoStat.orElseThrow().getDislikeCount()).isEqualTo(1);
 
         // Rate DISLIKE then VideoRating is updated with DISLIKE type.
         mockMvc.perform(post("/api/v1/videos/rate/mine")
@@ -568,6 +506,9 @@ public class VideoControllerTest {
 
         videoRating = videoRatingRepository.findByUserIdAndVideoId(userId, videoId);
         assertThat(videoRating.getRating()).isEqualTo(VideoRating.Rating.DISLIKE);
+        videoStat = videoStatisticRepository.findById(videoId);
+        assertThat(videoStat.orElseThrow().getLikeCount()).isEqualTo(0);
+        assertThat(videoStat.orElseThrow().getDislikeCount()).isEqualTo(2);
 
         // Rate NONE while there is a VideoRating then delete it.
         mockMvc.perform(post("/api/v1/videos/rate/mine")
@@ -578,48 +519,9 @@ public class VideoControllerTest {
 
         videoRating = videoRatingRepository.findByUserIdAndVideoId(userId, videoId);
         assertThat(videoRating).isNull();
-    }
-
-    @Test
-    @Transactional
-    public void givenVideoId_whenRateVideo_thenVideoStatisticUpdatedAsExpected() throws Exception {
-        final var videoId = "e65707b4";
-
-        // Rate NONE while there is no VideoRating then ignore.
-        mockMvc.perform(post("/api/v1/videos/rate/mine")
-                        .param("videoId", videoId)
-                        .param("rating", "none"))
-                .andExpect(status().isOk());
-        var videoStat = videoStatisticRepository.findById(videoId);
-        assertThat(videoStat.orElseThrow().getLikeCount()).isEqualTo(0);
-        assertThat(videoStat.orElseThrow().getDislikeCount()).isEqualTo(0);
-
-        // Rate LIKE then VideoRating is created with LIKE type.
-        mockMvc.perform(post("/api/v1/videos/rate/mine")
-                        .param("videoId", videoId)
-                        .param("rating", "like"))
-                .andExpect(status().isOk());
-        videoStat = videoStatisticRepository.findById(videoId);
-        assertThat(videoStat.orElseThrow().getLikeCount()).isEqualTo(1);
-        assertThat(videoStat.orElseThrow().getDislikeCount()).isEqualTo(0);
-
-        // Rate DISLIKE then VideoRating is updated with DISLIKE type.
-        mockMvc.perform(post("/api/v1/videos/rate/mine")
-                        .param("videoId", videoId)
-                        .param("rating", "dislike"))
-                .andExpect(status().isOk());
         videoStat = videoStatisticRepository.findById(videoId);
         assertThat(videoStat.orElseThrow().getLikeCount()).isEqualTo(0);
         assertThat(videoStat.orElseThrow().getDislikeCount()).isEqualTo(1);
-
-        // Rate NONE while there is a VideoRating then delete it.
-        mockMvc.perform(post("/api/v1/videos/rate/mine")
-                        .param("videoId", videoId)
-                        .param("rating", "none"))
-                .andExpect(status().isOk());
-        videoStat = videoStatisticRepository.findById(videoId);
-        assertThat(videoStat.orElseThrow().getLikeCount()).isEqualTo(0);
-        assertThat(videoStat.orElseThrow().getDislikeCount()).isEqualTo(0);
     }
 
     @Test
@@ -627,14 +529,14 @@ public class VideoControllerTest {
         mockMvc.perform(get("/api/v1/videos/related/mine")
                         .param("videoId", "e65707b4"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(2));
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(jsonPath("$[*].id").value(contains("e65707b4")));
     }
 
     @Test
     public void whenGetVideoCategories_thenSuccess() throws Exception {
         mockMvc.perform(get("/api/v1/videos/video-categories/mine"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$")
-                        .value(contains("music", "sport")));
+                .andExpect(jsonPath("$").value(contains("music")));
     }
 }
